# print-shop-automation

./: .dockerignore  .env.example  .gitignore  DOCUMENTATION-UPDATE-2026-03-26.txt  Dockerfile  README.md  agent.toml.example  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
deploy/: docker-compose.yml
docs/: README.md  UPDATE-LOG-UV-INTEGRATION.md  agent-printer-backend.md  design-guidelines.md  dtf-memory-patch-research.md  printer-backend-integration.md  printer-support-matrix.md  project-changelog.md  project-roadmap.md  research-commercial-landscape.md  research-dashboard-inspiration.md  research-htmx-dark-theme.md  research-mobile-dashboard.md  research-python-monorepo.md  system-architecture.md  tech-stack.md
docs/wireframes/: analytics.html  base.html  dashboard.html  job-queue.html  printer-control.html
plans/260323-0907-agent-installer-deployment/: phase-01-build-pipeline-pyinstaller-inno-setup.md  phase-02-dashboard-deployment-strategy.md  phase-03-auto-update-mechanism.md  phase-04-code-signing-and-distribution.md  phase-05-installer-testing-strategy.md  plan.md
plans/260323-1015-mvp-build-order-brainstorm/: brainstorm-report.md
plans/260323-printflow-commercialization/: phase-01-persistent-printer-registry.md  plan.md  (+9 more)
scripts/: agent.spec  build-agent.bat  build-dashboard.bat  dashboard.spec  dev-start.bat  dev-start.sh  install-service.bat  package-deploy.bat  printer-test.py  run-agent.bat  setup-agent-gui.ps1  setup-agent.bat  test-dtf-inject.bat  test-dtf-inject.py  uninstall-service.bat
tests/: conftest.py
(+6 files in other folders)
