[project]
name = "print-shop-automation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "agent",
    "dashboard",
    "common",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pyinstaller>=6.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
agent = { workspace = true }
dashboard = { workspace = true }
common = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
